--- a/app/src/main/res/layout/activity_hoa_don.xml
+++ b/app/src/main/res/layout/activity_hoa_don.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/or"
     tools:context=".ViewActivity.HoaDonActivity">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
