--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -15,7 +15,12 @@
         android:icon="@drawable/ic_list_black"
         android:title="Hoá Đơn" />
     <item
+        android:id="@+id/menu_Cart"
+        android:icon="@drawable/ic_cart"
+        android:title="Giỏ Hàng" />
+    <item
         android:id="@+id/menu_CaNhan"
         android:icon="@drawable/ic_person_black"
         android:title="Cá Nhân" />
+
 </menu>
