--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -28,6 +28,7 @@
         android:id="@+id/btnCheckout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="#ff5e00"
         android:text="Đặt hàng" />
 
 </LinearLayout>
