--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,20 +72,23 @@
                 app:itemTextColor="@drawable/menu_custom"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img_buncha" />
+
+            <!-- RecyclerView cho danh mục -->
+
             <TextView
                 android:id="@+id/tv_ThucDon"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="Thực đơn"
-                android:textColor="@color/black"
+                android:layout_margin="12dp"
+                android:text="THỰC ĐƠN"
+                android:textColor="#FFFFFF"
                 android:textSize="35sp"
-                android:textStyle="bold"
+                android:textStyle="bold|italic"
+                android:textAlignment="center"
+                android:background="@drawable/bg_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                 />
-            <!-- RecyclerView cho danh mục -->
+                app:layout_constraintStart_toStartOf="parent" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/re_Cate"
                 android:layout_width="match_parent"
