--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,8 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:padding="8dp"
+    android:elevation="2dp"
+    android:layout_margin="6dp"
+   >
 
     <ImageView
         android:id="@+id/img_FoodItem"
@@ -12,18 +16,20 @@
         android:layout_height="80dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:background="@drawable/border_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.368" />
 
+    <!-- Product name -->
     <TextView
         android:id="@+id/productName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:text="TextView"
+        android:text="Product Name"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -31,34 +37,32 @@
         app:layout_constraintStart_toEndOf="@+id/img_FoodItem"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Product description -->
     <TextView
         android:id="@+id/productDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="35dp"
-        android:text="TextView"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:text="Description of the product"
         android:textColor="@color/black"
         android:textSize="14sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/img_FoodItem"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/productName" />
 
+    <!-- Product total sale -->
     <TextView
         android:id="@+id/productTotalSale"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="65dp"
-        android:text="TextView"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:text="Total Sales"
         android:textColor="@color/black"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/img_FoodItem"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/productDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
