--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,9 +65,9 @@
             <ImageView
                 android:id="@+id/img_Banner"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="160dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="0dp"
                 app:itemIconTint="@drawable/menu_custom"
                 app:itemTextColor="@drawable/menu_custom"
                 android:scaleType="centerCrop"
@@ -79,7 +79,7 @@
                 android:id="@+id/tv_ThucDon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_margin="6dp"
                 android:text="THỰC ĐƠN"
                 android:textColor="#FFFFFF"
                 android:textSize="35sp"
@@ -88,6 +88,16 @@
                 android:background="@drawable/bg_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:queryHint="Tim kiem san pham" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/re_Cate"
