--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,61 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- ConstraintLayout cho phần đầu trang -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
-
-        <!-- Ảnh người dùng -->
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_User"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/profile"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <!-- Dòng chữ "Welcome" -->
-        <TextView
-            android:id="@+id/tv_wCome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Welcome"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/img_User"
-            app:layout_constraintTop_toTopOf="@+id/img_User"
-            android:layout_marginStart="8dp" />
-
-        <!-- Tên người dùng -->
-        <TextView
-            android:id="@+id/tv_User"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:text="Tên người dùng"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/img_User"
-            app:layout_constraintTop_toBottomOf="@+id/tv_wCome" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- Hình ảnh minh họa -->
     <ImageView
         android:id="@+id/img_Banner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_buncha" />
+        android:src="@drawable/img_buncha"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Tiêu đề "THỰC ĐƠN" -->
     <TextView
         android:id="@+id/tv_ThucDon"
         android:layout_width="match_parent"
@@ -67,23 +24,21 @@
         android:textStyle="bold|italic"
         android:textAlignment="center"
         android:background="@drawable/bg_gradient"
-        android:layout_below="@id/img_Banner" />
+        app:layout_constraintTop_toBottomOf="@id/img_Banner" />
 
-    <!-- RecyclerView cho danh mục -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/re_Cate"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
-        android:layout_below="@id/tv_ThucDon"
-        android:layout_alignParentBottom="true" />
+        app:layout_constraintTop_toBottomOf="@id/tv_ThucDon"
+        app:layout_constraintBottom_toTopOf="@id/bottom_NaView"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    <!-- BottomNavigationView -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_NaView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_admin" />
+        app:menu="@menu/bottom_nav_admin"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
