--- a/app/src/main/res/layout/activity_hoa_don.xml
+++ b/app/src/main/res/layout/activity_hoa_don.xml
@@ -26,7 +26,7 @@
         android:layout_weight="1"
         android:background="@color/design_default_color_background" />
 
-    <!-- Tổng tiền -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,21 +34,13 @@
         android:layout_marginTop="16dp"
         android:padding="8dp">
 
-        <TextView
-            android:id="@+id/tvTotalLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Tổng tiền:"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
+
 
         <TextView
             android:id="@+id/tvTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="VND 0"
+            android:text="0 VND"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black" />
