--- a/app/src/main/res/layout/activity_ca_nhan.xml
+++ b/app/src/main/res/layout/activity_ca_nhan.xml
@@ -25,6 +25,16 @@
         app:layout_constraintTop_toBottomOf="@id/tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+    <Button
+        android:id="@+id/btn_ThongKe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thống Kê"
+        android:backgroundTint="#ff5e00"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_qlsp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_changePassword"
@@ -33,7 +43,7 @@
         android:text="Đổi mật khẩu"
         android:backgroundTint="#ff5e00"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_qlsp"
+        app:layout_constraintTop_toBottomOf="@id/btn_ThongKe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
