--- a/app/src/main/res/layout/activity_hoa_don.xml
+++ b/app/src/main/res/layout/activity_hoa_don.xml
@@ -7,6 +7,15 @@
     android:background="@color/white">
 
     <!-- Tiêu đề hóa đơn -->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp">
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_back"/>
     <TextView
         android:id="@+id/tvInvoiceTitle"
         android:layout_width="match_parent"
@@ -17,6 +26,7 @@
         android:gravity="center"
         android:layout_marginBottom="16dp"
         android:textColor="@color/black" />
+</LinearLayout>
 
     <!-- RecyclerView hiển thị danh sách sản phẩm -->
     <androidx.recyclerview.widget.RecyclerView
@@ -44,7 +54,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black" />
-    </LinearLayout>
 
+    </LinearLayout>
 
 </LinearLayout>
