--- a/app/src/main/res/layout/activity_thong_ke.xml
+++ b/app/src/main/res/layout/activity_thong_ke.xml
@@ -1,26 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewActivity.ThongKeActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
     <TextView
-        android:id="@+id/txt_manage_products"
-        android:layout_width="match_parent"
+        android:id="@+id/tvTop10Products"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="16dp"
-        android:text="THỐNG KÊ"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:text="Top 10 sản phẩm bán chạy:"
+        android:textColor="@color/purple_200"
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp" />
+    <TextView
+        android:id="@+id/tvRevenue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tổng doanh thu: 0 VNĐ"
+        android:textSize="18sp"
+        android:textColor="@color/purple_200"
+        android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:id="@+id/tvBestProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginBottom="670dp"
+        android:text="Sản phẩm bán chạy nhất: N/A"
+        android:textColor="@color/purple_200"
+        android:textSize="18sp" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_NaView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_admin"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvBestProduct"
+        app:layout_constraintVertical_bias="1.0"
+        app:menu="@menu/bottom_nav_admin" />
+</LinearLayout>
